--- a/young.css
+++ b/young.css
@@ -87,7 +87,8 @@ nav ul li{
    /* background-position: center;*/
 }
 .young{
-    background-image: url(young.jpg); 
+    background-image: url(young.jpg);
+    background-size: 100% 100%;
     width: 100%;
     height:90vh;
     line-height: 10vh;
@@ -121,6 +122,7 @@ nav ul li{
     font-family: sans-serif;
     padding: 5px;
     background: white;
+    word-wrap: break-word;
 }
 .designbox:hover{
     background: darkgreen;
