--- a/young.css
+++ b/young.css
@@ -1,118 +1,91 @@
-body{ 
-  /*  padding-top: 60px;
-    padding-bottom: 40px;*/
-    background-position: cover;
+body,html{ 
+    height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin-left: 0%;
     background-color: whitesmoke;
-}
-.fixed-header{
-    width: 100%;
-    position: fixed;
-    background: rgb(35, 128, 35);
-    color: #fff;
-    height: 10%;
-}
-.fixed-header{
-    top: 0;
-}
-.container{
-    width: 80%;
-    margin: 0;
 
 }
-#nav{
-    width: 100%;
-}
-nav li i{
-    font-size: 2em;
-}
-#nav ul{
-    padding: 0;
-    margin: 0;
-    display: none;
-    position: absolute; top: 79px;
-}
-nav ul::after{
-    content: "";
-    display: block;
-    clear: both;
-}
-nav ul li{
-    display:list-item;
-    list-style: none;
-    float: left;
+.young{
+    background-image:url('young.jpg');
+    background-repeat: no-repeat;
+    height:100%;
+    background-position: center;
     position: relative;
-    border-bottom: none;
+    background-size:;
+    display: flex;
+    text-align:center ;
 }
-/* adding the dropdown style: hide dropdowns by default, display dropdowns on hover*/
-#nav ul li:hover > ul{
-    display: list-item;
-}
-/*
-.dropdown-content{
-    display: none;
+.young-text{
+    text-align: center;
     position: absolute;
-    background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    background-color: rgb(5, 131, 26);
-    color: white;
-    padding: 14px 16px;
-    margin: 0;
-    font-size: 16px;
+    top: 30%;
+    left: 30%;
+    transform: translate(-50% -50%);
+    line-height: 1.5;
+    color: darkgreen;
+    line-height: 1.5;
+    font-family:'Times New Roman';
 }
-.dropdown-content a{
-    float: right;
-    padding:12px 16px;
-    text-decoration: none;
-    display: block;
+.young-text h2{
+    font-size: 200;
+    font-weight: bold;
+    color: darkgreen;
+    font-family: 'Times New Roman';
+
+}
+.a:link, a:visited{
+    background-color: transparent;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration:none;
+    display: inline-block;
+}
+@media screen and (device-aspect-ratio:16/9){
+    body{color: darkgreen;}
+}
+@media print{
+    body{
+        width:100%;
+    }
+}
+@media screen and(max-width:520px){
+    body{
+        font-size: 30px;
+        width: 100%;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+}
+.topnav{
+    background-color: darkgreen;
+    overflow: hidden;
     text-align: left;
+    font-weight: bold;
     
 }
-.dropdown-content a:hover{
-    background-color: #ddd;
-}
-.dropdown, .dropbtn{
-    font-size: 16px;
-    border: none;
-    outline: none;
+.topnav a{
+    float:left;
     color: white;
-    padding: 14px 16px;
-    background-color: rgb(5, 131, 26);
-    margin: 0;
-}
+    text-align:center;
+    padding:20px 8px;
+    text-decoration:none;
+    font-size:15px;
+    display: block;
+} 
 
- .body-container{
-    width: 100%;
-    background: whitesmoke;
-    margin: 0;
-    padding: 0;*/
-
-.young{
-    background-image: url(young.jpg);
-    background-size: 100% 100%;
-    width: 100%;
-    height:90vh;
-    line-height: 10vh;
-}
-.young pre{
-    text-align: center; 
-    color: rgb(18, 73, 18);
-    font-family: sans-serif;
-}
 .who{
     background-color:white;
-    width: 100%;
     height: 6%;
     border:2px darkgreen;
+    font-family: 'Times New Roman';
     
 }
 .who h2{
     text-align: center;
     color: rgb(18, 73, 18);
     margin-top: 30px;
+    font-family: 'Times New Roman';
     
 }
 .designbox{
@@ -123,7 +96,7 @@ nav ul li{
     width: 30%;
     font-size: 15px;
     margin: 10px;
-    font-family: sans-serif;
+    font-family: 'Times New Roman';
     padding: 5px;
     background: white;
     word-wrap: break-word;
@@ -143,7 +116,7 @@ nav ul li{
     transform: rotate(360deg);
 }
 .designbox pre{
-    font-family: sans-serif;
+    font-family: 'Times New Roman';
     text-align: center;
 }
 .myform{
@@ -202,9 +175,11 @@ nav ul li{
     font-size: 15px;
 }
 .footer{
-    width: 100%;
     background: rgb(3, 61, 3);
     color: white;
-    height: 30%;
+    float: none;
+    margin-top: 30px;
     text-align: center;
+    padding: 10px;
+    font-family: 'Times New Roman';
 }
